Update server startup settings