@@ -185,13 +185,13 @@ function command-start {
         SERVER_JAR=$(ls forge*universal.jar | tail -n1)
 
         tail -n 0 -F server.stdin \
-            | java -Xmx6G -Xms3G -Xmn768m -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseNUMA \
-                -XX:+CMSParallelRemarkEnabled -XX:MaxTenuringThreshold=15 -XX:MaxGCPauseMillis=30 \
-                -XX:GCPauseIntervalMillis=150 -XX:+UseAdaptiveGCBoundary -XX:-UseGCOverheadLimit -XX:+UseBiasedLocking \
-                -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=15 \
-                -XX:+UseFastAccessorMethods -XX:+UseCompressedOops -XX:+OptimizeStringConcat -XX:+AggressiveOpts \
-                -XX:ReservedCodeCacheSize=2048m -XX:+UseCodeCacheFlushing -XX:SoftRefLRUPolicyMSPerMB=10000 \
-                -XX:ParallelGCThreads=10 \
+            | java -XX:+UseG1GC -Xmx6G -Xms6G \
+                -Dsun.rmi.dgc.server.gcInterval=2147483646 \
+                -XX:+UnlockExperimentalVMOptions \
+                -XX:G1NewSizePercent=20 \
+                -XX:G1ReservePercent=20 \
+                -XX:MaxGCPauseMillis=50 \
+                -XX:G1HeapRegionSize=32M \
                 -jar $SERVER_JAR nogui $SERVER_NAME \
             >> logs/server.log 2>&1 &
         disown
